Fix grid layout for chatbox causing misalignment

--- a/FomoApp/ClientApp/src/features/portfolio/PortfolioPage.css
+++ b/FomoApp/ClientApp/src/features/portfolio/PortfolioPage.css
@@ -5,7 +5,7 @@
     min-height: 100%;
     display: grid;
     grid-template-columns: repeat(16, [col-start] 1fr);
-    grid-template-rows: auto min-content 1fr;
+    grid-template-rows: min-content min-content auto;
 }
 
 #portfolio-stock-search-container{
@@ -21,9 +21,8 @@
 }
 
 #portfolio-chatbox-container{
-    padding-top: 2rem;
     grid-column: 10 / span 4;
-    grid-row: 2;
+    grid-row: 2 / span 2;
     height: 40rem;
 }
 
